Fix 483844: kontact segfaults on startup

I can't reproduce it but I can avoid it.
I prefere fix real bug but without reproducing it...

BUG: 483844
FIXED-IN: 24.02.1